--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,14 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone:  http://localhost:8761/eureka/
+
+microservice:
+  payment-service:
+    endPoints:
+      fetchPaymentById:
+        uri: http://PAYMENT-SERVICE/api/payments/
+  user-service:
+    endPoints:
+      fetchUserById:
+        uri: http://USER-SERVICE/api/users/
+      
